--- a/_posts/2003-07-29-LDS.md
+++ b/_posts/2003-07-29-LDS.md
@@ -1,10 +1,8 @@
 ---
 layout: default
-title: ЛСШКС
+title: Установлена Лазерная Система Швартовки
 lang: ru
 ---
-<img src="/images/lds.jpg" width="150" height="113" align="left" class="bleft" />
-
-### Установлена Лазерная Система Швартовки
+<img src="{{ "/images/lds.jpg" | relative_url }}" width="150" height="113" align="left" class="bleft" />
 
 29.07.2003 сдана в эксплуатацию Лазерная Система Швартовки Крупнотоннажных Судов (ЛСШКС), установленная на причалах нефтерайона ОАО «Новороссийский Морской Торговый Порт».
