--- a/_posts/2003-07-29-LDS-EN.md
+++ b/_posts/2003-07-29-LDS-EN.md
@@ -1,10 +1,8 @@
 ---
 layout: default
-title: LDS
+title: LDS was installed
 lang: en
 ---
-<img src="/images/lds.jpg" width="150" height="113" align="left" class="bleft" />
-
-### LDS was installed
+<img src="{{ "/images/lds.jpg" | relative_url }}" width="150" height="113" align="left" class="bleft" />
 
 29.07.2003 Laser Docking System (LDS) was installed on the oil terminals of the Novorossiysk Commercial Sea Port.
